kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: itam
  labels:
    name: itam
    environment: production
